--- a/faned/scripts/cfg/options.cfg
+++ b/faned/scripts/cfg/options.cfg
@@ -282,7 +282,7 @@ newgui options [
             guitext "select action to bind and press desired keys (ESC when done):"  
             guibar 
 
-            bindactions = [forward backward left right jump attack chainsawattack dropflag teleport togglezoom keydownzoom saychatcommand sayteamcommand sayirccommand sayleetspeakcommand showscores afktoggle audiotoggle consoletoggle derpytoggle edittoggle fullscreentoggle efficiency_chainsaw efficiency_shotgun efficiency_chaingun efficiency_rocketlauncher efficiency_rifle efficiency_grenadelauncher efficiency_pistol "setweapon FI" "setweapon SG" "setweapon CG" "setweapon RL" "setweapon RI" "setweapon GL" "setweapon PI" weapon combatgear minecraftedit_dig minecraftedit_build addbot delbot getmap sendmap savemap quit]
+            bindactions = [forward backward left right jump attack dropflag teleport togglezoom keydownzoom saychatcommand sayteamcommand sayirccommand sayleetspeakcommand showscores afktoggle audiotoggle consoletoggle derpytoggle edittoggle fullscreentoggle efficiency_chainsaw efficiency_shotgun efficiency_chaingun efficiency_rocketlauncher efficiency_rifle efficiency_grenadelauncher efficiency_pistol "setweapon FI" "setweapon SG" "setweapon CG" "setweapon RL" "setweapon RI" "setweapon GL" "setweapon PI" weapon combatgear minecraftedit_dig minecraftedit_build addbot delbot getmap sendmap savemap quit]
 
             guilistsplit n 2 $bindactions [ 
                 guilist [ 
