--- a/faned/scripts/cfg/quickedit.cfg
+++ b/faned/scripts/cfg/quickedit.cfg
@@ -175,15 +175,23 @@ quickeditmenu = [
             guicheckbox "show material volumes"    showmat
             guibar
             guibutton "air"                        "editmat air"
-            guibutton "water"                      "editmat water"
-            guibutton "lava"                       "editmat lava"
-            guibutton "clip"                       "editmat clip"
-            guibutton "glass"                      "editmat glass"
-            guibutton "noclip"                     "editmat noclip"
-            guibutton "gameclip"                   "editmat gameclip"
-            guibutton "death"                      "editmat death"
             guibutton "alpha"                      "editmat alpha"
-    
+            guibutton "clip"                       "editmat clip"
+            guibutton "death"                      "editmat death"
+            guibutton "gameclip"                   "editmat gameclip"
+            guibutton "glass"                      "editmat glass"
+            guibutton "glass2"                     "editmat glass2"
+            guibutton "glass3"                     "editmat glass3"
+            guibutton "glass4"                     "editmat glass4"
+            guibutton "lava"                       "editmat lava"
+            guibutton "lava2"                      "editmat lava2"
+            guibutton "lava3"                      "editmat lava3"
+            guibutton "lava4"                      "editmat lava4"
+            guibutton "noclip"                     "editmat noclip"
+            guibutton "water"                      "editmat water"
+            guibutton "water2"                     "editmat water2"
+            guibutton "water3"                     "editmat water3"
+            guibutton "water4"                     "editmat water4"
             guitab "vSlots"
             guilist [
                 loop x 5 [
