Add autocomplete to all chat binds.

--- a/faned/data/defaults.cfg
+++ b/faned/data/defaults.cfg
@@ -264,35 +264,35 @@ bind R dropflag
 sayirccommand = [
     inputcommand (if (>= $numargs 1) [result $arg1] [result ""]) [
         ircsay $_ircnet $_ircchan $commandbuf
-    ] (concatword "[irc]")
+    ] (concatword "[irc]") s
 ]
-bind "I" [sayirccommand]
+bind I [sayirccommand]
 
 sayleetspeakcommand = [
     inputcommand (if (>= $numargs 1) [result $arg1] [result ""]) [
         leetspeak $commandbuf
-    ] (concatword "[leet]")
+    ] (concatword "[leet]") s
 ]
-bind "L" [sayleetspeakcommand]
+bind L [sayleetspeakcommand]
 
 saychatcommand = [
     inputcommand (if (>= $numargs 1) [result $arg1] [result ""]) [
         say $commandbuf
     ] (concatword "[chat]") s
 ]
-bind "T" [saychatcommand]
+bind T [saychatcommand]
 
 sayteamcommand = [
     inputcommand (if (>= $numargs 1) [result $arg1] [result ""]) [
         sayteam $commandbuf
-    ] (concatword "[team]")
+    ] (concatword "[team]") s
 ]
 bind Y [sayteamcommand]
 
 sayexeccommand = [
     inputcommand (if (>= $numargs 1) [result $arg1] [result ""]) [
         do $commandbuf
-    ] (concatword "[exec]")
+    ] (concatword "[exec]") s
 ]
 bind CARET sayexeccommand
 bind BACKQUOTE sayexeccommand
